--- a/market-frontend/style/tailwind.css
+++ b/market-frontend/style/tailwind.css
@@ -18,6 +18,39 @@ html.dark {
   --background-colour: #18191a;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 50px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  outline: none;
+}
+
+textarea {
+  resize: none;
+}
+
 @layer base {
   .logo-text {
     font-family: sarif;
