--- a/market-frontend/style/tailwind.css
+++ b/market-frontend/style/tailwind.css
@@ -18,6 +18,13 @@ html.dark {
   --background-colour: #18191a;
 }
 
+:root,
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
